# flumen

./: Cargo.toml  README.md  Square_200x200.rgba  client.py  pngToRgba.py
src/: main.rs
src/client/: index.html  index.js  style.css
src/client/css/: style.css
